--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 <body>
     <div class="container">
+        <div class="title"><h1>weather app</h1></div>
         <div class="search-box">
             <input type="text" class="search-bar" placeholder="Search for a city...">
         </div>
+        <div class="submit-box">
+            <button class="submit-button">Submit</button>
         <div class="weather-box">
             <div class="temp">15°C</div>
             <div class="weather">Sunny</div>
